2008-02-11  Neil Jerram  <neil@ossau.uklinux.net>

	* numbers.c (SCM_COMPLEX_VALUE): Use GUILE_I instead of _Complex_I
	directly, and only if GUILE_I was defined by the configure step.
	(scm_log, scm_log10, scm_exp, scm_sqrt): Use SCM_COMPLEX_VALUE
	code only if SCM_COMPLEX_VALUE is defined.

2008-02-07  Ludovic Courtès  <ludo@gnu.org>

	Fix bug #21378.
	Thanks to David Diffenbaugh <davediff@nbcs.rutgers.edu>.

	* read.c (scm_read_quote): Don't use `__FUNCTION__' since it is
	not supported by Sun CC on Solaris 9.
	(scm_read_keyword): Likewise.
	* strings.c (scm_take_locale_stringn): Remove
	`SCM_C_INLINE_KEYWORD' to allow compilation with Sun CC.

2008-02-07  Julian Graham  <joolean@gmail.com>

	* throw.c (make_jmpbuf): Don't enter critical section during thread
	spawn -- there is a possibility of deadlock if other threads are
	exiting.
	
2008-02-06  Neil Jerram  <neil@ossau.uklinux.net>

	* gc-malloc.c (scm_gc_malloc): Return NULL if requested size is 0.
	(scm_gc_free): Don't call `free' if mem is NULL.

2008-02-06  Ludovic Courtès  <ludo@gnu.org>

	* numbers.c (scm_i_mkbig, scm_i_long2big, scm_i_ulong2big,
	scm_i_clonebig, scm_i_bigcmp, scm_i_dbl2big, scm_i_dbl2num,
	scm_i_normbig): Remove `SCM_C_INLINE_KEYWORD' since these are
	declared as `extern' in `numbers.h'.  This precluded compilation
	on Solaris 9 with Sun CC (reported by David Halik
	<dhalik@nbcs.rutgers.edu>).

2008-02-05  Neil Jerram  <neil@ossau.uklinux.net>

	* fports.c (fport_seek): Make dependent on GUILE_USE_64_CALLS.

	* _scm.h: Make definition of CHOOSE_LARGEFILE depend on
	GUILE_USE_64_CALLS.

2008-02-01  Neil Jerram  <neil@ossau.uklinux.net>

	* modules.c (the_root_module): Moved before scm_current_module.
	(scm_current_module): Return the root module if `the-module' fluid
	gives #f.

2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* COPYING: Removed.

	* __scm.h, _scm.h, weaks.c: Update copyright statement to LGPL.

2008-01-18  Neil Jerram  <neil@ossau.uklinux.net>
